# url-fairy-bot

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  cleanup.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-push.yml  lint-docker-hadolint.yml  lint-python-black.yml  lint-python-ruff.yml
app/: api.py  bot.py  config.py  download.py  main.py  models.py  url_processing.py
bot/: main.py  pyproject.toml
bot/url-fairy-bot/: main.py
nginx/conf.d/: default.conf
src/: __init.__py  config.py  domain_replacements.py  download_manager.py  healthcheck.py  main.py  message_handler.py
tests/: bot_test.py  test_api.py  test_bot.py  test_url_processing.py  url_processing_test.py
